zadara-aws-config: extend to support customization

--- a/charts/zadara-aws-config/templates/aws-meta.yml
+++ b/charts/zadara-aws-config/templates/aws-meta.yml
@@ -1,8 +1,7 @@
-{{- $endpointUrl := "https://cloud.zadara.com" -}}
 ---
 apiVersion: v1
 kind: ConfigMap
 metadata:
   name: aws-meta
 data:
-  endpoint: {{ $endpointUrl }}/api/v2/aws/ec2
+  endpoint: {{ tpl $.Values.serviceOverrides.ec2.Url $ }}
