--- a/charts/zadara-aws-config/templates/cloud-config.yml
+++ b/charts/zadara-aws-config/templates/cloud-config.yml
@@ -1,5 +1,3 @@
-{{- $endpointUrl := "https://cloud.zadara.com" -}}
-{{- $region := "us-east-1" -}}
 ---
 apiVersion: v1
 kind: ConfigMap
@@ -8,22 +6,12 @@ metadata:
 data:
   cloud.conf: |
     [Global]
-    Zone={{ $region }}
+    Zone={{ tpl (default $.Values.default.region $.Values.global.region) $ }}
+{{- range $svc, $cfg := $.Values.serviceOverrides }}
 
-    [ServiceOverride "ec2"]
-    Service=ec2
-    Region={{ $region }}
-    URL={{ $endpointUrl }}/api/v2/aws/ec2
-    SigningRegion={{ $region }}
-
-    [ServiceOverride "autoscaling"]
-    Service=autoscaling
-    Region={{ $region }}
-    URL={{ $endpointUrl }}/api/v2/aws/autoscaling
-    SigningRegion={{ $region }}
-
-    [ServiceOverride "elasticloadbalancing"]
-    Service=elasticloadbalancing
-    Region={{ $region }}
-    URL={{ $endpointUrl }}/api/v2/aws/elbv2
-    SigningRegion={{ $region }}
+    [ServiceOverride "{{ $svc }}"]
+    Service={{ $svc }}
+    Region={{ tpl (default $.Values.default.region $cfg.region) $ }}
+    SigningRegion={{ tpl (default $.Values.default.signingRegion $cfg.signingRegion) $ }}
+    URL={{ tpl $cfg.Url $ }}
+{{- end }}
