docs: fix description

--- a/charts/k3s-helmchartconfig/values.yaml
+++ b/charts/k3s-helmchartconfig/values.yaml
@@ -1,4 +1,4 @@
-# Map of HelmChartConfig objects for k3s helm operator
+# -- Map of HelmChartConfig objects for k3s helm operator
 config: {}
 #  traefik:
 #    namespace: kube-system
