feat: add vespa dashboards from https://github.com/vespa-engine/sample-apps/commit/1829615d155aa00c4f85b30411e16f85afb20624

--- a/charts/grafana-dashboards/values.yaml
+++ b/charts/grafana-dashboards/values.yaml
@@ -21,3 +21,10 @@ nvidia:
   annotations: {}
   # -- Set labels for objects in dashboards/nvidia
   labels: {}
+vespa:
+  # -- Deploy vespa dashboards
+  enabled: false
+  # -- Set annotations for objects in dashboards/nvidia
+  annotations: {}
+  # -- Set labels for objects in dashboards/nvidia
+  labels: {}
