--- a/charts/argo-examples-onyx/templates/ollama.yml
+++ b/charts/argo-examples-onyx/templates/ollama.yml
@@ -35,7 +35,7 @@ spec:
               - llama3.1:8b-instruct-q8_0
             run:
               - llama3.1:8b-instruct-q8_0
-        replicaCount: 1
+        replicaCount: {{ $appConfig.redundancy.replicas }}
         extraEnv:
           - name: "OLLAMA_KEEP_ALIVE"
             value: "-1"
