fix: correct argocd reference

--- a/charts/argo-examples-operators/templates/argo-cd.yml
+++ b/charts/argo-examples-operators/templates/argo-cd.yml
@@ -1,4 +1,4 @@
-{{ $chartName := "argocd" }}
+{{ $chartName := "argo-cd" }}
 {{ $repoURL := "https://argoproj.github.io/argo-helm" }}
 {{ $appConfig := merge (index $.Values $chartName) $.Values.common }}
 {{- if ne $appConfig.enabled false }}
