--- a/charts/argo-examples-onyx/templates/ollama.yml
+++ b/charts/argo-examples-onyx/templates/ollama.yml
@@ -49,7 +49,7 @@ spec:
             memory: 20Gi
             nvidia.com/gpu: 8
         persistentVolume:
-          enabled: true
+          enabled: false
           size: 200Gi
         runtimeClassName: nvidia
         affinity:
