fix: set api replica back to 1, seeing inconsistent behavior

--- a/charts/argo-examples-onyx/templates/onyx.yml
+++ b/charts/argo-examples-onyx/templates/onyx.yml
@@ -61,7 +61,7 @@ spec:
         web:
           replicaCount: {{ $appConfig.redundancy.replicas }}
         api:
-          replicaCount: {{ $appConfig.redundancy.replicas }}
+          replicaCount: 1
         worker:
           replicaCount: 1
         {{- range $i, $section := (list "inference" "index") }}
