fix: revise reference to selfsigned cert from cert-manager

--- a/charts/argo-examples-onyx/templates/onyx.yml
+++ b/charts/argo-examples-onyx/templates/onyx.yml
@@ -93,7 +93,7 @@ spec:
           enabled: {{ default false $appConfig.ingress.enabled }}
           {{- if default false $appConfig.ingress.enabled }}
           annotations:
-            cert-manager.io/cluster-issuer: self-signed
+            cert-manager.io/cluster-issuer: selfsigned
           tls: true
           {{- if not (not $appConfig.ingress.rootDomain) }}
           hostname: "onyx.{{ $appConfig.ingress.rootDomain }}"
