--- a/charts/argo-examples-operators/templates/victoria-metrics-k8s-stack.yml
+++ b/charts/argo-examples-operators/templates/victoria-metrics-k8s-stack.yml
@@ -53,7 +53,7 @@ spec:
             enabled: {{ and (default false $appConfig.ingress.enabled) (not (not $appConfig.ingress.rootDomain)) }}
             {{- if and (default false $appConfig.ingress.enabled) (not (not $appConfig.ingress.rootDomain)) }}
             annotations:
-              cert-manager.io/cluster-issuer: self-signed
+              cert-manager.io/cluster-issuer: selfsigned
             hosts:
               - "grafana.{{ $appConfig.ingress.rootDomain }}"
             tls:
