--- a/charts/argo-examples-operators/templates/argo-cd.yml
+++ b/charts/argo-examples-operators/templates/argo-cd.yml
@@ -31,7 +31,8 @@ spec:
           domain: "argocd.{{ $appConfig.ingress.rootDomain }}"
         {{- end }}
         configs:
-          params: {}
+          params:
+            server.insecure: true
           cm:
             resource.customizations.health.argoproj.io_Application: |
               hs = {}
