feat: link redis-ha replica to redundancy value

--- a/charts/argo-examples-operators/templates/argo-cd.yml
+++ b/charts/argo-examples-operators/templates/argo-cd.yml
@@ -48,7 +48,9 @@ spec:
               end
               return hs
           rbac: {}
-        redis-ha: { enabled: true }
+        redis-ha:
+          enabled: true
+          replicas: {{ max 2 $appConfig.redundancy.replicas }}
         controller: { replicas: {{ $appConfig.redundancy.replicas }} }
         applicationSet: { replicas: {{ $appConfig.redundancy.replicas }} }
         repoServer:
