feat: add default revisionHistoryLimit

--- a/charts/argo-examples-onyx/templates/onyx.yml
+++ b/charts/argo-examples-onyx/templates/onyx.yml
@@ -100,5 +100,8 @@ spec:
           hostname: "onyx.{{ $appConfig.ingress.rootDomain }}"
           {{- end }}
           {{- end }}
+        redis:
+          master:
+            revisionHistoryLimit: {{ $appConfig.revisionHistoryLimit }}
 {{- end }}
 {{- end }}
