fix: update deprecated cert-manager args

--- a/charts/argo-examples-operators/templates/cert-manager.yml
+++ b/charts/argo-examples-operators/templates/cert-manager.yml
@@ -26,6 +26,7 @@ spec:
 {{- if $appConfig.helmConfig }}
 {{ toYaml $appConfig.helmConfig | indent 8 }}
 {{- else }}
-        installCRDs: true
+        crds:
+          enabled: true
 {{- end }}
 {{- end }}
