feat: add namespaceOverride

--- a/charts/misc-secrets/templates/sealed.yaml
+++ b/charts/misc-secrets/templates/sealed.yaml
@@ -5,6 +5,7 @@ apiVersion: "bitnami.com/v1alpha1"
 kind: SealedSecret
 metadata:
   name: {{ printf "%s" $secretName }}
+  namespace: {{ default $.Release.Namespace $.Values.namespaceOverride }}
 {{- if $secretMeta.annotations }}
   annotations: {{ toYaml $secretMeta.annotations | nindent 4 }}
 {{- end }}
