--- a/charts/misc-secrets/templates/tls.yaml
+++ b/charts/misc-secrets/templates/tls.yaml
@@ -6,6 +6,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: {{ printf "%s" $secretName }}
+  namespace: {{ default $.Release.Namespace $.Values.namespaceOverride }}
 {{- if $secretMeta.annotations }}
   annotations: {{ toYaml $secretMeta.annotations | nindent 4 }}
 {{- end }}
