--- a/charts/misc-secrets/values.yaml
+++ b/charts/misc-secrets/values.yaml
@@ -1,3 +1,5 @@
+# -- Override default namespace for all secrets
+namespaceOverride: ''
 # -- Insecure and generic secret
 insecure-opaque:
   example:
