--- a/charts/argo-examples-onyx/templates/onyx.yml
+++ b/charts/argo-examples-onyx/templates/onyx.yml
@@ -55,6 +55,12 @@ spec:
           vespa:
             VESPA_CONFIG_SERVER_HOST: 'vespa-cfg'
             VESPA_HOST: 'vespa-content'
+          {{- if default false $appConfig.config.configMap.auth }}
+          auth: {{ toYaml $appConfig.config.configMap.auth | nindent 12 }}
+          {{- end }}
+          {{- if default false $appConfig.config.configMap.web }}
+          web: {{ toYaml $appConfig.config.configMap.web | nindent 12 }}
+          {{- end }}
         hotpatch:
           vespaRedundancy: {{ (div $appConfig.redundancy.replicas 2) | add1 }}
         web:
