feat: add section for unifying configuration of auth

--- a/charts/argo-examples-onyx/templates/onyx.yml
+++ b/charts/argo-examples-onyx/templates/onyx.yml
@@ -55,11 +55,24 @@ spec:
           vespa:
             VESPA_CONFIG_SERVER_HOST: 'vespa-cfg'
             VESPA_HOST: 'vespa-content'
-          {{- if default false $appConfig.config.configMap.auth }}
-          auth: {{ toYaml $appConfig.config.configMap.auth | nindent 12 }}
-          {{- end }}
           {{- if default false $appConfig.config.configMap.web }}
           web: {{ toYaml $appConfig.config.configMap.web | nindent 12 }}
+          {{- end }}
+          {{- if or (default false $appConfig.config.configMap.auth) (ne appConfig.auth.type "none") }}
+          auth:
+            {{- if eq appConfig.auth.type "google" }}
+            AUTH_TYPE: google_oauth
+            GOOGLE_OAUTH_CLIENT_ID: {{ $appConfig.auth.oauthClientID }}
+            GOOGLE_OAUTH_CLIENT_SECRET: {{ $appConfig.auth.oauthClientSecret }}
+            {{- if $appConfig.auth.oauthValidEmailDomains }}
+            VALID_EMAIL_DOMAINS: {{ $appConfig.auth.oauthValidEmailDomains }}
+            {{- end }}
+            {{- else if eq appConfig.auth.type "basic" }}
+            AUTH_TYPE: basic
+            {{- end }}
+            {{- if default false $appConfig.config.configMap.auth }}
+            {{ toYaml $appConfig.config.configMap.auth | nindent 12 }}
+            {{- end }}
           {{- end }}
         hotpatch:
           vespaRedundancy: {{ (div $appConfig.redundancy.replicas 2) | add1 }}
