--- a/charts/argo-examples-operators/templates/argo-cd.yml
+++ b/charts/argo-examples-operators/templates/argo-cd.yml
@@ -48,6 +48,7 @@ spec:
                   issuer: https://accounts.google.com
                   clientID: {{ $appConfig.auth.oauthClientID }}
                   clientSecret: {{ $appConfig.auth.oauthClientSecret }}
+                type: oidc
                 id: google
                 name: Google
             {{- end }}
