--- a/charts/argo-examples-operators/templates/cloudnative-pg.yml
+++ b/charts/argo-examples-operators/templates/cloudnative-pg.yml
@@ -27,12 +27,11 @@ spec:
 {{ toYaml $appConfig.helmConfig | indent 8 }}
 {{- else }}
         monitoring:
-          podMonitorEnabled: {{ (index $.Values "victoria-metrics-k8s-stack").enabled }}
+          podMonitorEnabled: {{ default false $appConfig.monitoring.enabled }}
           podMonitorAdditionalLabels:
-            release: victoria-metrics-k8s-stack
+            release: {{ default false $appConfig.monitoring.label }}
           grafanaDashboard:
             create: {{ (index $.Values "victoria-metrics-k8s-stack").enabled }}
             namespace: victoria-metrics-k8s-stack
-
 {{- end }}
 {{- end }}
