fix: remove unnecessary default

--- a/charts/argo-examples-operators/templates/cloudnative-pg.yml
+++ b/charts/argo-examples-operators/templates/cloudnative-pg.yml
@@ -29,7 +29,7 @@ spec:
         monitoring:
           podMonitorEnabled: {{ default false $appConfig.monitoring.enabled }}
           podMonitorAdditionalLabels:
-            release: {{ default false $appConfig.monitoring.label }}
+            release: {{ $appConfig.monitoring.label }}
           grafanaDashboard:
             create: {{ (index $.Values "victoria-metrics-k8s-stack").enabled }}
             namespace: victoria-metrics-k8s-stack
