fix: unly trigger "run" on the first model in ollama, not all

--- a/charts/argo-examples-onyx/templates/ollama.yml
+++ b/charts/argo-examples-onyx/templates/ollama.yml
@@ -32,7 +32,8 @@ spec:
             type: nvidia
           models:
             pull: {{ toYaml $appConfig.config.models | nindent 14 }}
-            run: {{ toYaml $appConfig.config.models | nindent 14 }}
+            run:
+              - {{ $appConfig.config.models | first }}
         replicaCount: {{ $appConfig.redundancy.replicas }}
         extraEnv:
           - name: "OLLAMA_KEEP_ALIVE"
